# Github_Agent

./: .env.example  .gitignore  DEVLOG.md  README.md  ROADMAP.md  analyze_github_profile.py  app.py  generate_suggestions_files.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
docs/: architecture.md
docs/adr/: ADR-001-public-only-github-oauth.md  ADR-002-deterministic-final-report-formatting.md  ADR-003-sqlite-analysis-cache.md  ADR-004-playwright-pdf-rendering.md  README.md
docs/reports/: multirepo_md_report.md
src/: __init__.py  analysis_store.py  config.py  errors.py  exporters.py  github_auth.py  github_client.py  openai_service.py  prompts.py  repo_checks.py  report_builder.py  schemas.py
suggestions/: AI_Job_Application_Agent.md  Automatic_Ticket_Classifier.md  Credit_Card_Fraud_Detection.md  Gesture_Recognition.md  Github_Agent.md  HelpmateAI_RAG_QA_System.md  Lending_Club_CaseStudy.md  Linear_Regression_BikeDemand.md  Telecom_Churn_Case_study.md  numpy.md  portfolio.md
tests/: test_analysis_store.py  test_exporters.py  test_github_auth.py  test_github_client.py  test_openai_service.py  test_repo_checks.py  test_report_builder.py
