[project]
name = "github-portfolio-reviewer-agent"
version = "0.1.0"
description = "Streamlit app for auditing GitHub repositories and portfolios."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "markdown-it-py",
    "openai",
    "playwright",
    "reportlab",
    "requests",
    "streamlit",
]

[tool.uv]
package = false